--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/localforage": "^0.0.34",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
